--- a/src/android/build-extras.gradle
+++ b/src/android/build-extras.gradle
@@ -3,5 +3,5 @@ repositories{
 }
 
 dependencies {
-    compile 'com.github.scottyab:rootbeer:091a157959'
+    compile 'com.github.scottyab:rootbeer:0.0.8'
 }
